--- a/man1/szu-ss.1
+++ b/man1/szu-ss.1
@@ -20,7 +20,7 @@
 .\"
 .TH SZU\-S 1 2014 sanzang-utils "Sanzang Utilities"
 .SH NAME
-szu\-ss \- make table-based string substitutions
+szu\-ss \- table-based string substitution
 .SH SYNOPSIS
 .B szu\-ss
 [\fIoptions\fR] \fItable_file\fR
