--- a/man1/szu-t.1
+++ b/man1/szu-t.1
@@ -23,13 +23,13 @@
 szu\-t \- translate CJK text into other languages
 .SH SYNOPSIS
 .B szu\-t
-[\fIoptions\fR] \fItable_file\fR
+[\fIoptions\fR] \fItable_file\fR [\fIfile\fR \fI...\fR]
 .SH DESCRIPTION
 This is a program for translating Chinese, Japanese, or Korean (CJK) text into
 other languages. The translation method uses rules defined in a translation
 table file. These rules are applied at runtime to generate a text translation
-listing. Input text is read from the standard input (stdin) and written to the
-standard output (stdout).
+listing. If no input files are specified, text is read from the standard input
+(stdin). Program output is written to the standard output (stdout).
 .PP
 This program requires a translation table file, which is a delimited text file
 in the following format:
@@ -77,7 +77,7 @@ The exit status is 0 on normal termination, and 1 on error.
 Errors will print a message to the standard error stream (stderr). To enable
 stack traces for debugging, enable the \*(lqverbose\*(rq option.
 .SH EXAMPLES
-.B $ szu\-t mytable < infile > outfile
+.B $ szu\-t mytable infile > outfile
 .PP
 Translate text from \fIinfile\fR to \fIoutfile\fR, using the rules in
 \fImytable\fR.
