Avoid underlined text in terminals args (readability).

--- a/man1/szu-ed.1
+++ b/man1/szu-ed.1
@@ -23,7 +23,7 @@
 szu\-ed \- edit a translation table
 .SH SYNOPSIS
 .B szu\-ed
-[\fIoptions\fR] \fItable_file\fR
+[options] table_file
 .SH DESCRIPTION
 This is a program for editing Sanzang translation table rules. The editor can
 accept a small number of commands that allow one to add, modify, or remove
