--- a/man1/szu-r.1
+++ b/man1/szu-r.1
@@ -23,7 +23,7 @@
 szu\-r \- reformat CJK text for translation
 .SH SYNOPSIS
 .B szu\-r
-[\fIoptions\fR]
+[options]
 .SH DESCRIPTION
 This tool transforms Chinese, Japanese, or Korean (CJK) text into lines in
 which words are not broken apart. The utility does this by collapsing all line
