--- a/man1/szu-ss.1
+++ b/man1/szu-ss.1
@@ -23,7 +23,7 @@
 szu\-ss \- table-based string substitution
 .SH SYNOPSIS
 .B szu\-ss
-[\fIoptions\fR] \fItable_file\fR
+[options] table_file
 .SH DESCRIPTION
 This is a program for making fixed string substitutions using a two-column
 translation table file. After reading the input text, each source term is
