--- a/man1/szu-t.1
+++ b/man1/szu-t.1
@@ -23,7 +23,7 @@
 szu\-t \- translate CJK text into other languages
 .SH SYNOPSIS
 .B szu\-t
-[\fIoptions\fR] \fItable_file\fR [\fIfile\fR \fI...\fR]
+[options] table_file [file ...]
 .SH DESCRIPTION
 This is a program for translating Chinese, Japanese, or Korean (CJK) text into
 other languages. The translation method uses rules defined in a translation
