--- a/man1/szu-r.1
+++ b/man1/szu-r.1
@@ -23,13 +23,13 @@
 szu\-r \- reformat CJK text for translation
 .SH SYNOPSIS
 .B szu\-r
-[options]
+[options] [file ...]
 .SH DESCRIPTION
 This tool transforms Chinese, Japanese, or Korean (CJK) text into lines in
 which words are not broken apart. The utility does this by collapsing all line
 breaks, and then reformatting the text based on horizontal spacing and
-punctuation. Input is read from the standard input (stdin) and written to the
-standard output (stdout).
+punctuation. If no input file is specified, then text is read from the standard
+input stream (stdin). Output text is written to the standard output (stdout).
 .PP
 Reformatting CJK text is an important step before attempting machine
 translation on it. This program may be used to preprocess text prior to its
@@ -48,7 +48,7 @@ Errors will print a message to the standard error stream. To enable stack
 traces for debugging, enable the \*(lqverbose\*(rq option.
 .SH EXAMPLES
 .B
-$ szu\-r < infile > outfile
+$ szu\-r infile > outfile
 .PP
 Read text from one file, reformat it, and write it to another file.
 .PP
