Fixed manpage typo.

--- a/man1/szu-ss.1
+++ b/man1/szu-ss.1
@@ -18,7 +18,7 @@
 .\" FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 .\" DEALINGS IN THE SOFTWARE.
 .\"
-.TH SZU\-S 1 2014 sanzang-utils "Sanzang Utilities"
+.TH SZU\-SS 1 2014 sanzang-utils "Sanzang Utilities"
 .SH NAME
 szu\-ss \- table-based string substitution
 .SH SYNOPSIS
