szu-t.1: adjust list spacing.

--- a/man1/szu-t.1
+++ b/man1/szu-t.1
@@ -47,9 +47,9 @@ target language(s).
 Using the example table depicted above, if we attempt to translate the text
 \*(lqnihao, shijie\*(rq, then the output of the program is:
 .PP
-.B 1.1| nihao, shijie
+.B 1.1|nihao, shijie
 .br
-.B 1.2| \ hello , \ world
+.B 1.2| hello , \ world
 .PP
 Translation tables may contain any number of translation rules, and translation
 rules may contain Unicode characters. If you are editing a translation table
